<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/TrainInfo"
                android:title="@string/trainroute"/>
        <item
                android:id="@+id/TrainName"
                android:title="@string/traindetails"/>
        <item
                android:id="@+id/PNRStatus"
                android:title="@string/pnrstatus"/>
        <item
                android:id="@+id/CancelledTrains"
                android:title="@string/cancelledtrains"/>
        <item
                android:id="@+id/nav_share"
                android:title="@string/trainsbetween"/>
        <item
                android:id="@+id/trainarrivals"
                android:title="@string/trainarrivals"/>
        <item
                android:id="@+id/nav_signout"
                android:title="@string/logout"/>
    </group>
<!--
    <item android:title="@string/share">
        <menu>

            <item
                    android:id="@+id/nav_send"
                    android:title="Sample"/>
        </menu>
    </item>
-->
</menu>
